Fixed z-index issue with modals (#27)

--- a/src/css/deon-style.css
+++ b/src/css/deon-style.css
@@ -1588,6 +1588,7 @@ span.note a {
 
 .modal-layer {
   display: none;
+  z-index: 9999;
 }
 .modal-layer.open {
   display: block;
